# Rayvan

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.agents/roles/: architecture-reviewer.md  code-explorer.md  code-reviewer.md  commit-pusher.md  implementer.md  quick-implementer.md
.codex/: config.toml
.codex/agents/: architecture-reviewer.toml  code-explorer.toml  code-reviewer.toml  commit-pusher.toml  implementer.toml  quick-implementer.toml
.cursor/agents/: architecture-reviewer.md  code-explorer.md  code-reviewer.md  commit-pusher.md  implementer.md  quick-implementer.md
.cursor/rules/: harness.mdc
.github/workflows/: ci.yml
ai/: BOOTSTRAP.md  harness-manifest.json
apps/daemon/: package.json
apps/daemon/src/: daemon-client.ts  errors.ts  index.ts  lock.ts  main.ts  runtime.ts  server.ts
apps/daemon/tests/: ipc.integration.test.ts  secrets.test.ts  tsconfig.typecheck.json  vitest.config.ts
apps/desktop/: PACKAGING.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: prepare-sidecars.mjs
apps/desktop/src/: main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  prefs.rs
apps/desktop/src-tauri/src/commands/: daemon.rs  mod.rs  projects.rs  settings.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/mcp-server/: package.json  tsconfig.json  vitest.config.ts
apps/mcp-server/src/: cli.ts  index.ts  main.ts
apps/mcp-server/tests/: server.test.ts
crates/credential-store/: Cargo.toml
crates/credential-store/src/: keychain.rs  lib.rs  redaction.rs
crates/daemon-ipc/: Cargo.toml
crates/daemon-ipc/src/: client.rs  framing.rs  lib.rs  paths.rs
crates/local-store/: Cargo.toml
crates/local-store/migrations/: v3_plugin_persistence.sql  v4_environments_configuration.sql  v5_desired_applied_configuration.sql  v6_findings.sql  v7_daemon_control_plane.sql
crates/local-store/src/: database.rs  lib.rs  migrations.rs  plugins.rs  projects.rs  settings.rs
crates/native-core/: Cargo.toml
crates/native-core/src/: filesystem.rs  lib.rs  paths.rs  platform.rs  processes.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs  lifecycle.rs  permissions.rs  (+2 more)
docs/architecture/: action-approval-model.md  ai-harness.md  domain-model.md  local-daemon-mcp.md  overview.md  plugin-system.md  process-model.md  security-model.md
docs/decisions/: 0001-local-first-architecture.md
docs/plugins/: authoring.md  lifecycle.md  permissions.md
docs/product/: principles.md  terminology.md  vision.md
plugins/example-local/: package.json  tsconfig.json
plugins/github/: package.json
plugins/runpod/: package.json  tsconfig.json
plugins/supabase/: package.json
plugins/vercel/: package.json
tests/integration/: daemon-mcp-e2e.test.ts  plugins.test.ts
tooling/eslint/: package.json
tooling/scripts/: ensure-tauri-frontend-dist.mjs  prepush.sh  validate-harness.mjs
tooling/typescript/: package.json
(+145 files in other folders)
