[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/native-core",
    "crates/plugin-host",
    "crates/credential-store",
    "crates/local-store",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Rayvan Contributors"]
repository = "https://github.com/rayvan/rayvan"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
