[package]
name = "rayvan-local-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native local database lifecycle for Rayvan"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
